--- a/OneShotPOS.csproj
+++ b/OneShotPOS.csproj
@@ -21,6 +21,9 @@
     <Compile Update="AddEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="EditProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
