--- a/OneShotPOS.csproj
+++ b/OneShotPOS.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Siticone.NetCore.UI" Version="2025.10.21" />
     <PackageReference Include="SQLitePCLRaw.core" Version="3.0.2" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
   <ItemGroup>
