--- a/OneShotPOS.csproj
+++ b/OneShotPOS.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="EditProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="EditEmployee.cs">
       <SubType>Form</SubType>
     </Compile>
